fixed height of profile on smaller screens

--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -5,6 +5,7 @@
   max-width: 33.125rem; /* 530px */
   padding: 2rem; /* 32px */
   align-items: center;
+  height: 100%;
   border-radius: 1rem; /* 15px */
   background: #143a4a;
   box-shadow: 0px 2px 4px -2px rgba(16, 24, 40, 0.06), 0px 4px 8px -2px rgba(16, 24, 40, 0.10);
@@ -21,7 +22,6 @@
   max-width: 29.125rem; /* 466px */
   max-height: 26.875rem; /* 430px */
   border-radius: 1.25rem; /* 20px */
-  overflow: hidden;
   margin-bottom: 1.875rem; /* 30px */
 }
 
@@ -39,6 +39,6 @@
   }
 
   .profileimage {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 }
